[project]
name = "harpy"
description = "Actor-reactor model in Python"
readme = "README.md"
version = "0.0.1"
license = "GPL-3.0-only"
dependencies = [
    "thespian >= 3.10",
    "reactivex >= 4"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["harpy"]
